[gd_scene load_steps=3 format=3 uid="uid://bhb3horkcnct7"]

[ext_resource type="Script" uid="uid://n0n8ya0rgd6l" path="res://scenes/MainMenu.gd" id="1_yqorp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ykhv"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0ykhv")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -349.0
offset_top = -324.0
offset_right = 349.0
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 141
text = "Champion"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -74.95
offset_right = 99.0
offset_bottom = 212.05
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 29

[node name="Challenge" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Challenge"

[node name="Practice" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Practice"

[node name="Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Challenge" to="." method="_on_challenge_pressed"]
[connection signal="pressed" from="VBoxContainer/Practice" to="." method="_on_practice_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
